src/test/resources/private/typechecking/pass/method_invocation/method_params_05.jova
class Class2 {
    public int test1(int x){
        return 1;
    }

    public int test2(bool x, string y) {
        return test1(0);
    }

    public int test3(string x, bool y, Class2 c) {
        return 0;
    }

}

class Class1 {
    private Class2 c;

    public int test() {
        return this.c.test1(55);
    }

    public int test2() {
        return this.c.test2(true, "asdfasdf");
    }

    public int test3() {
        Class2 c;
        return this.c.test3("asdf", true, c);
    }
}



